plugins {
    id "com.github.johnrengelman.shadow" version "6.1.0"
    id "java"
}

group = "com.thebluehats.server"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()

    maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots" }
    maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }

    maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
}

dependencies {
    implementation "com.konghq:unirest-java:3.11.04"
    implementation "com.google.inject:guice:4.1.0"
    implementation "com.google.code.gson:gson:2.8.6"
    implementation "org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT"
    testImplementation "junit:junit:4.11"
    testImplementation "org.mockito:mockito-core:3.5.15"
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

tasks.withType(Test) {
    jvmArgs([
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
    ])
}
